--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,8 @@
     <dynamodblocal.version>2.2.1</dynamodblocal.version>
     <!-- Note: when updating FoundationDB, also include a copy of `libfdb_c.so` from the FoundationDB release at
     src/main/jib/usr/lib/libfdb_c.so. We use x86_64 builds without AVX instructions enabled (i.e. FoundationDB versions
-    with even-numbered patch versions). -->
+    with even-numbered patch versions). Also when updating FoundationDB, make sure to update the version of FoundationDB
+    used by GitHub Actions. -->
     <foundationdb.version>7.3.62</foundationdb.version>
     <google-cloud-libraries.version>26.57.0</google-cloud-libraries.version>
     <grpc.version>1.70.0</grpc.version> <!-- should be kept in sync with the value from Google libraries-bom -->
