Use a Redis testcontainer instead of `embedded-redis` in `RedisServerExtension`

--- a/pom.xml
+++ b/pom.xml
@@ -275,6 +275,12 @@
         <scope>test</scope>
       </dependency>
       <dependency>
+        <groupId>com.redis</groupId>
+        <artifactId>testcontainers-redis</artifactId>
+        <version>2.2.2</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
         <groupId>org.signal</groupId>
         <artifactId>libsignal-server</artifactId>
         <version>0.67.6</version>
