--- a/service/config/sample.yml
+++ b/service/config/sample.yml
@@ -298,6 +298,11 @@ dogstatsd:
   environment: dev
   host: 127.0.0.1
 
+openTelemetry:
+  enabled: true
+  environment: dev
+  url: http://127.0.0.1:4318/
+
 unidentifiedDelivery:
   certificate: CgIIAQ==
   privateKey: secret://unidentifiedDelivery.privateKey
