Configure Micrometer distribution buckets for OpenTelemetry
Co-authored-by: Jon Chambers <63609320+jon-signal@users.noreply.github.com>

--- a/service/src/test/resources/config/test.yml
+++ b/service/src/test/resources/config/test.yml
@@ -303,6 +303,9 @@ openTelemetry:
   environment: dev
   shutdownWaitDuration: PT0S
   url: http://127.0.0.1:4318/
+  maxBucketCount: 16
+  maxBucketsPerMeter:
+    chat.SomeClass.someMetric: 64
 
 unidentifiedDelivery:
   certificate: CgIIAQ==
