Publish metrics from circuit breaker/retry registries

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -296,6 +296,10 @@
       <groupId>io.github.resilience4j</groupId>
       <artifactId>resilience4j-reactor</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.github.resilience4j</groupId>
+      <artifactId>resilience4j-micrometer</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>io.grpc</groupId>
