test.yml: Use libsignal's test sealed sender certificate

--- a/service/src/test/resources/config/test-secrets-bundle.yml
+++ b/service/src/test/resources/config/test-secrets-bundle.yml
@@ -144,11 +144,11 @@ keyTransparencyService.clientPrivateKey: |
   7NSEd5L+df4M7V9YxxDoYY+UHd8B/KmrWR29SVIRLncSULgfSnHnHvoH
   -----END PRIVATE KEY-----
 
-# The below private key was generated exclusively for testing purposes. Do not use it in any other context.
+# The below private keys are exclusively for testing purposes. Do not use them in any other context.
 # Trust root for the certificate in test.yml:
-# Public key : BVDuaR1ZT/5M26nSvFN1XjN4qFqVfwynt03l/GyK2GtP
-# Private key: 0Ie2/CIxfidwhS+uKSckb2YgtRR7UBLkecHNG2ARiW8=
-unidentifiedDelivery.privateKey: UKRdvrnxcy1hcILN7RHqUG40/mUd/ZnKkqhQToN4K1U=
+# Public key : BS/lfaNHzWJDFSjarF+7KQcw//aEr8TPwu2QmV9Yyzt0
+# Private key: AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=
+unidentifiedDelivery.privateKey: //////////////////////////////////////////8=
 
 storageService.userAuthenticationTokenSharedSecret: AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=
 
