--- a/service/pom.xml
+++ b/service/pom.xml
@@ -11,11 +11,11 @@
   <artifactId>service</artifactId>
 
   <properties>
-    <firebase-admin.version>9.4.3</firebase-admin.version>
+    <firebase-admin.version>9.6.0</firebase-admin.version>
     <java-uuid-generator.version>5.1.0</java-uuid-generator.version>
-    <google-androidpublisher.version>v3-rev20250318-2.0.0</google-androidpublisher.version>
-    <storekit.version>3.4.0</storekit.version>
-    <webauthn4j.version>0.28.6.RELEASE</webauthn4j.version>
+    <google-androidpublisher.version>v3-rev20250904-2.0.0</google-androidpublisher.version>
+    <storekit.version>3.6.0</storekit.version>
+    <webauthn4j.version>0.29.6.RELEASE</webauthn4j.version>
     <java-jwt.version>4.5.0</java-jwt.version>
   </properties>
 
@@ -243,12 +243,19 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-compress</artifactId>
-      <version>1.27.1</version>
+      <version>1.28.0</version>
     </dependency>
 
     <dependency>
       <groupId>com.google.cloud</groupId>
       <artifactId>google-cloud-pubsub</artifactId>
+      <exclusions>
+        <!-- our direct import of guava brings in a more recent version of failureaccess, so excluding it here -->
+        <exclusion>
+          <groupId>com.google.guava</groupId>
+          <artifactId>failureaccess</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <!-- resolve opentelemetry-semconv conflicts from lower in firebase-admin and firestore dependency trees -->
@@ -261,12 +268,17 @@
           <groupId>io.opentelemetry.semconv</groupId>
           <artifactId>opentelemetry-semconv</artifactId>
         </exclusion>
+        <!-- our direct import of guava brings in a more recent version of failureaccess, so excluding it here -->
+        <exclusion>
+          <groupId>com.google.guava</groupId>
+          <artifactId>failureaccess</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
       <groupId>io.opentelemetry.semconv</groupId>
       <artifactId>opentelemetry-semconv</artifactId>
-      <version>1.30.0</version>
+      <version>1.37.0</version>
     </dependency>
     <dependency>
       <groupId>com.google.cloud</groupId>
@@ -275,6 +287,11 @@
         <exclusion>
           <groupId>io.opentelemetry.semconv</groupId>
           <artifactId>opentelemetry-semconv</artifactId>
+        </exclusion>
+        <!-- our direct import of guava brings in a more recent version of failureaccess, so excluding it here -->
+        <exclusion>
+          <groupId>com.google.guava</groupId>
+          <artifactId>failureaccess</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
@@ -390,7 +407,7 @@
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>dynamodb-lock-client</artifactId>
-      <version>1.3.0</version>
+      <version>1.4.0</version>
     </dependency>
 
     <dependency>
@@ -432,7 +449,7 @@
     <dependency>
       <groupId>com.googlecode.libphonenumber</groupId>
       <artifactId>geocoder</artifactId>
-      <version>3.2</version>
+      <version>3.14</version>
     </dependency>
 
     <dependency>
