Make BraintreeConfiguration.publicKey a SecretString

--- a/service/config/sample-secrets-bundle.yml
+++ b/service/config/sample-secrets-bundle.yml
@@ -3,6 +3,7 @@ datadog.apiKey: unset
 stripe.apiKey: unset
 stripe.idempotencyKeyGenerator: abcdefg12345678= # base64 for creating request idempotency hash
 
+braintree.publicKey: unset
 braintree.privateKey: unset
 
 googlePlayBilling.credentialsJson: |
