--- a/service/src/test/resources/config/test-secrets-bundle.yml
+++ b/service/src/test/resources/config/test-secrets-bundle.yml
@@ -4,6 +4,7 @@ aws.secretAccessKey: secretAccess
 stripe.apiKey: unset
 stripe.idempotencyKeyGenerator: abcdefg12345678= # base64 for creating request idempotency hash
 
+braintree.publicKey: unset
 braintree.privateKey: unset
 
 # The below private key was generated exclusively for testing purposes. Do not use it in any other context.
