Add direct grpc server

--- a/service/config/sample.yml
+++ b/service/config/sample.yml
@@ -529,15 +529,6 @@ turn:
 linkDevice:
   secret: secret://linkDevice.secret
 
-noiseTunnel:
-  webSocketPort: 8444
-  directPort: 8445
-  tlsKeyStoreFile: /path/to/file.p12
-  tlsKeyStoreEntryAlias: example.com
-  tlsKeyStorePassword: secret://noiseTunnel.tlsKeyStorePassword
-  noiseStaticPrivateKey: secret://noiseTunnel.noiseStaticPrivateKey
-  recognizedProxySecret: secret://noiseTunnel.recognizedProxySecret
-
 externalRequestFilter:
   grpcMethods:
     - com.example.grpc.ExampleService/exampleMethod
@@ -548,3 +539,6 @@ externalRequestFilter:
 
 idlePrimaryDeviceReminder:
   minIdleDuration: P30D
+
+grpc:
+  port: 50051
