support JSON logging and prefer it in sample config
We won't actually remove OTLP logging support until testing side-by-side and
seeing that things look good.

--- a/service/config/sample.yml
+++ b/service/config/sample.yml
@@ -10,7 +10,18 @@ logging:
       threshold: ALL
       timeZone: UTC
       target: stdout
-    - type: otlp
+      layout:
+        type: json
+        timestampFormat: ISO_INSTANT
+        includes:
+          - timestamp
+          - level
+          - threadName
+          - marker
+          - loggerName
+          - message
+          - exception
+          - callerData
 
 tlsKeyStore:
   password: secret://tlsKeyStore.password
