--- a/service/pom.xml
+++ b/service/pom.xml
@@ -109,6 +109,10 @@
     </dependency>
     <dependency>
       <groupId>io.dropwizard</groupId>
+      <artifactId>dropwizard-json-logging</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.dropwizard</groupId>
       <artifactId>dropwizard-metrics</artifactId>
     </dependency>
     <dependency>
