Revert "support JSON logging and prefer it in sample config"
This reverts commit 4d5cc4dc2202bfcea764e657c3a126b6365a7dc2.

--- a/service/config/sample.yml
+++ b/service/config/sample.yml
@@ -10,18 +10,7 @@ logging:
       threshold: ALL
       timeZone: UTC
       target: stdout
-      layout:
-        type: json
-        timestampFormat: ISO_INSTANT
-        includes:
-          - timestamp
-          - level
-          - threadName
-          - marker
-          - loggerName
-          - message
-          - exception
-          - callerData
+    - type: otlp
 
 tlsKeyStore:
   password: secret://tlsKeyStore.password
